@@ -126,7 +126,7 @@ public class MicrosoftTokenResponse extends TokenResponse {
     // The token returned is cached with this authority as key.
     // We expect the subsequent requests to AcquireToken will use this authority as the authority parameter,
     // otherwise the AcquireTokenSilent will fail
-    public final String getAuthority() {
+    public String getAuthority() {
         return mAuthority;
     }
 
