@@ -1,3 +1,7 @@
+vNext
+----------
+- [MINOR] Adding new methods in IAccountCredentialAdapter (#1954)
+
 V.10.0.0
 ----------
 - [MINOR] Setting sub error codes to UiRequiredException for MsalUiRequiredException (#1944)
